Scrollbar z-index fix

--- a/css/jagmain.css
+++ b/css/jagmain.css
@@ -2112,7 +2112,7 @@ input[type=submit]:hover {
 .header {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 999999999999999999999 !important;
   width: 100%;
   background-color: transparent;
   transition-delay: 0s;
@@ -2123,6 +2123,7 @@ input[type=submit]:hover {
 
 /* The progress container (grey background) */
 .progress-container {
+  z-index: 99999999999999999 !important;
   width: 100%;
   height: 4px;
   background-color: transparent;
@@ -2130,6 +2131,7 @@ input[type=submit]:hover {
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
+  z-index: 99999999999999999 !important;
   height: 4px;
   background: #F9423A;
   width: 0%;
